# gpt-echo

./: .env.sample  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  QA_CHECKLIST.md  README.md  ROADMAP.md  api_reference.md  graph_similarity_test.py  graphdb_indexer.py  main.py  memory_prompt_strategy.md  migrate_mongo.py  mnemosyne_graph_architecture_v1.3.md  muse_config.sample.json  project_mission.md  purge_deleted.py  requirements.txt  run_index.py  run_memory_index.py  run_mnemosyne_index.py  run_similarity_test.py  task_schedule.md  test_filters_harness.py  test_recall.py  threshold_conig.sample.json  view_dupes.py
add-ons/raspberrypi-speaker/: light_ring.py  ring_control.py  smart_speaker_client.py  tts_core.py  wake_listener.py
addons/memorymuse/: pyproject.toml
addons/memorymuse/memorymuse/: addon.py
addons/memorymuse/memorymuse/api/routers/: reminders_api.py  tts_api.py
addons/memorymuse/memorymuse/continuity/reminders/: commands.py
addons/memorymuse/memorymuse/reminders/: reminders_core.py  router.py
app/: chatgpt_api.py  config.py  dispatcher.py  echo_loop.py  log_utils.py  memory_store.py  openai_client.py  prompt_builder.py  webhook_listener.py
app/addon_loader/: loader.py
assets/: MessageComposer.drawio.xml  chat-layout.txt  gpt_echo_diagram.drawio.xml  history-layout.txt  landing.html  memory_core.drawio.xml  message_flow_logic.md  sync_chatgpt_logs.md
frontend/: package-lock.json  package.json  tailwind.config.js
local-dev/: docker-compose.yml
profiles/: iris_profile.json  memory_root.json
venv312/: pyvenv.cfg
(+126 files in other folders)
