[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memorymuse"
version = "0.1.0"
description = "Private MemoryMuse addon for Persistent Presence Platform"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["memorymuse*"]